# ancilla

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.embedder  README.md  worklog.txt
.cargo/: config.toml
docs/: runtime_programs_and_configs.md  sql_schema_and_retrieval.md
infra/tofu/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/tofu/modules/network/: main.tf  outputs.tf  variables.tf
infra/tofu/templates/: embedder-user-data.sh.tftpl
migrations/: 0001_init.sql  0002_normalize_entry_kind.sql  0003_markdown_memories.sql  README.md
prompts/: memory_creation.md
scripts/: README.md  __init__.py  deploy-app.sh  deploy-common.sh  deploy-embedder.sh  deploy-infra.sh  embedder_service.py  pplx_embed.py  pyproject.toml  redeploy.sh  test_embedder_service.py  test_pplx_embed.py
sql/: hybrid_memory_candidates.sql  v1_schema.sql
src/: api.rs  bedrock.rs  cli.rs  client.rs  client_cli.rs  client_config.rs  config.rs  embedder_client.rs  lib.rs  main.rs  memory_markdown.rs  model.rs  polly.rs  retrieval.rs  server_cli.rs  server_config.rs  service.rs  store.rs
web/: README.md  index.html  package.json
web/src/: App.tsx  index.css
