[package]
name = "ancilla"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.8"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = "1.129.0"
aws-types = "1"
chrono = { version = "0.4", default-features = false, features = ["serde", "std"] }
clap = { version = "4.5", features = ["derive"] }
http = "1.3"
pgvector = { version = "0.4", features = ["sqlx"] }
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "json", "chrono", "uuid"] }
thiserror = "2.0"
tokio = { version = "1.48", features = ["fs", "macros", "rt-multi-thread", "sync"] }
tower = { version = "0.5", features = ["util"] }
uuid = { version = "1.18", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3.20"
