[package]
name = "ancilla"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.8"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = "1.129.0"
aws-smithy-types = "1"
aws-types = "1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["serde", "std"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
http = "1.3"
pgvector = { version = "0.4", features = ["sqlx"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "json", "chrono", "uuid"] }
thiserror = "2.0"
tokio = { version = "1.48", features = ["fs", "macros", "rt-multi-thread", "sync"] }
tokio-stream = "0.1"
toml = "0.8"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
uuid = { version = "1.18", features = ["serde", "v4"] }
ratatui = "0.30.0"

[dev-dependencies]
tempfile = "3.20"
