[project]
name = "scripts"
version = "0.1.0"
description = "Developer utilities for local Ancilla workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3",
    "fastapi",
    "httpx",
    "psycopg[binary]",
    "sentence-transformers",
    "torch",
    "transformers",
    "uvicorn",
]
